--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 <nav>
     <ul>
         <li><a href="/settings">Settings <i class="icon icon-settings"></i></a></li>
-        <li><a href="/reset">Calibrate Scale <i class="icon icon-repeat"></i></a></li>
+        <li><a href="/reset">Reset Scale <i class="icon icon-repeat"></i></a></li>
     </ul>
 </nav>
 <div class="content">
