--- a/frontend/scss/partials/_input.scss
+++ b/frontend/scss/partials/_input.scss
@@ -5,6 +5,7 @@
     padding: 5px;
     background-color: $white;
     border: 2px solid $black;
+    margin-bottom: 20px;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0);
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0);
