--- a/templates/start.html
+++ b/templates/start.html
@@ -5,9 +5,9 @@
     {% else %}
         <h1>Initializing</h1>
     <div class="formWrapper">
-        <form action="{{ url_for('config_scale') }}" method="post">
-            <input type="text" v-model="country_code"  name="weight" placeholder="country code">
-            <input type="text" v-model="zip_code"  name="weight" placeholder="zip code">
+        <form action="{{ url_for('set_id') }}" method="post">
+            <input type="text" v-model="country_code"  name="country_code" placeholder="country code">
+            <input type="text" v-model="zip_code"  name="zip_code" placeholder="zip code">
             <button id="button" v-on:click="post" type="submit">Save <i class="icon icon-check"></i></button>
         </form>
     </div>
