--- a/frontend/scss/partials/_footer.scss
+++ b/frontend/scss/partials/_footer.scss
@@ -1,7 +1,7 @@
 footer {
   font-family: 'Nanum Gothic Coding', monospace;
   background: $white;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
