--- a/frontend/scss/partials/_variables.scss
+++ b/frontend/scss/partials/_variables.scss
@@ -30,7 +30,7 @@ $error: #3E3E40;
 $warning: #3E3E40;
 $check: #27ae60;
 
-$red: #B92B5D;
+$red: rgb(231,76,60);
 
 //global variables
 $wrapperPadding: 50px;
