--- a/frontend/scss/partials/_input.scss
+++ b/frontend/scss/partials/_input.scss
@@ -1,4 +1,4 @@
-  input[type="text"] {
+  input[type="text"], input[type="password"] {
     @include transition(all .5s ease);
     color: $primarycolor;
     width: calc(100% - 10px);
@@ -6,10 +6,11 @@
     background-color: $white;
     border: 2px solid $black;
     margin-bottom: 20px;
+    margin-top: 25px;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0);
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0);
-    &:focus {
+    &:focus, &:hover {
       outline: none;
       -webkit-box-shadow: 4px 6px 21px 0px rgba(0,0,0,0.75);
       -moz-box-shadow: 4px 6px 21px 0px rgba(0,0,0,0.75);
