--- a/frontend/scss/partials/_base.scss
+++ b/frontend/scss/partials/_base.scss
@@ -1,22 +1,47 @@
 body {
   font-family: 'Roboto', monospace;
   font-weight: 300;
+  color: $black;
+}
+
+%shadow {
+  -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.75);
+
+  &:hover {
+    -webkit-box-shadow: 3px 5px 6px 0 rgba(0, 0, 0, 0.45);
+    -moz-box-shadow: 3px 5px 6px 0 rgba(0, 0, 0, 0.45);
+    box-shadow: 3px 5px 6px 0 rgba(0, 0, 0, 0.45);
+  }
+}
+
+%invert_shadow {
+  -webkit-box-shadow: 3px 5px 6px 0 rgba(0, 0, 0, 0.45);
+  -moz-box-shadow: 3px 5px 6px 0 rgba(0, 0, 0, 0.45);
+  box-shadow: 3px 5px 6px 0 rgba(0, 0, 0, 0.45);
+
+  &:hover {
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.75);
+  }
 }
 
 %button {
+  @include transition(all .2s ease);
+  @extend %invert_shadow;
+  @include font-size(18);
   display: inline-block;
-  border: 2px solid black;
-  padding: 5px 16px;
+  background: $black;
+  color: $white;
+  padding: 8px 30px;
   text-decoration: none;
   text-transform: uppercase;
-  border-radius: 3px;
-  font-weight: 500;
-  font-size: 18px;
+  font-weight: 300;
+  font-size: 22px;
   line-height: 1;
-
-  &:hover {
-    border: 1px solid $darkGray;
-  }
+  border-radius: 3px;
 }
 
 div.content {
@@ -30,7 +55,7 @@ div.content {
 
 a.button {
   @extend %button;
-  margin-top: 25px;
+  margin-top: 50px;
 }
 
 div.formWrapper {
@@ -40,14 +65,15 @@ div.formWrapper {
 }
 
 nav.breadcrumb {
-  margin-top: -6px;
-  a.iconLink {
+  text-align: left;
+
+  a.button-icon {
+    @include font-size(18);
+    color: $black;
     text-decoration: none;
-    i {
-      font-size: 30px;
-    }
   }
 }
+
 @include keyframes(in) {
   from {
     opacity: 0;
@@ -57,7 +83,9 @@ nav.breadcrumb {
   }
 }
 
-[v-cloak] { display: none; }
+[v-cloak] {
+  display: none;
+}
 
 .mt-50 {
   display: block;
@@ -77,20 +105,23 @@ table {
   max-width: 320px;
   display: block;
   margin: 0 auto;
+
   tr {
     text-align: left;
   }
+
   td, th {
     padding: 5px 15px;
   }
 }
 
 div.tile {
+  @include transition(all .3s ease);
+  @extend %invert_shadow;
   display: inline-block;
   padding: 25px 50px;
-  border: 1px solid black;
   width: calc(100% - 100px);
-  margin-bottom: 25px;
+  margin-bottom: 55px;
   max-width: calc(320px - 100px);
   text-align: left;
   position: relative;
@@ -99,9 +130,16 @@ div.tile {
   h3 {
     text-transform: uppercase;
   }
+
   p {
     margin: 3px 0;
+    text-align: left;
   }
+
+  a.button {
+    margin-top: 25px;
+  }
+
   span.bold {
     font-weight: bold;
   }
@@ -124,7 +162,7 @@ div.dg-container {
   left: 0;
   right: 0;
   padding: 25px;
-  background: $red;
+  background: $warning;
 }
 
 div.dg-content {
@@ -134,4 +172,11 @@ div.dg-content {
 
 .dg-btn--cancel {
   margin-right: 20px;
+}
+
+.live_view {
+  font-size: 22px;
+  text-align: center;
+  display: block;
+  margin: 20px;
 }
