--- a/frontend/scss/partials/_head.scss
+++ b/frontend/scss/partials/_head.scss
@@ -1,13 +1,8 @@
-nav {
-  ul {
-    li {
-      list-style: none;
-      display: inline-block;
-      padding: 0 3px;
-      a {
-        text-decoration: none;
-        font-size: 18px;
-      }
-    }
-  }
+
+div.logoWrapper {
+  display: inline-block;
+  max-width: 200px;
+  line-height: 0;
+  vertical-align: bottom;
+  padding: 25px;
 }
