--- a/frontend/scss/partials/_input.scss
+++ b/frontend/scss/partials/_input.scss
@@ -1,20 +1,19 @@
-  input[type="text"], input[type="password"] {
+  input[type="number"], input[type="password"] {
     @include transition(all .5s ease);
     color: $primarycolor;
     width: calc(100% - 10px);
     padding: 5px;
     background-color: $white;
-    border: 2px solid $black;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid $black;
     margin-bottom: 20px;
     margin-top: 25px;
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0);
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0);
+    max-width: 150px;
+    border-radius: 0;
     &:focus, &:hover {
       outline: none;
-      -webkit-box-shadow: 4px 6px 21px 0px rgba(0,0,0,0.75);
-      -moz-box-shadow: 4px 6px 21px 0px rgba(0,0,0,0.75);
-      box-shadow: 4px 6px 21px 0px rgba(0,0,0,0.75);
     }
   }
 
