--- a/frontend/scss/partials/_variables.scss
+++ b/frontend/scss/partials/_variables.scss
@@ -16,7 +16,7 @@ $bp7: 1920px;
 // Colors
 $white: #fff;
 $darkWhite: #EDEEE9;
-$black: rgb(0, 0, 0);
+$black: #242017;
 
 $darkBlue: #153763;
 $blue: #005093;
@@ -25,9 +25,9 @@ $lightBlue: #4291D3;
 $darkGray: #525355;
 $lightGray: #D8D8D8;
 
-$primarycolor: $black;
+$primarycolor: #1D1E1F;
 $error: #3E3E40;
-$warning: #3E3E40;
+$warning: #f8c537;
 $check: #27ae60;
 
 $red: rgb(231,76,60);
