--- a/templates/calibrate.html
+++ b/templates/calibrate.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
     <nav class="breadcrumb">
-        <a href="/" class="button"><i class="icon icon-arrow-left"></i> back</a>
+        <a href="/" class="button-icon"><i class="icon icon-arrow-left"></i></a>
     </nav>
-    <h1>Calibrate</h1>
-    <h2 class="mb-standard">Please place an item of known weight on the scale. Press "Start" to continue when ready.</h2>
-    <a href="/calibrate_offset" class="button">Start <i class="icon icon-arrow-right"></i></a>
+    <h1>Save Offset</h1>
+    <p>Please place an item of known weight on the scale.</p>
+    <p class="normal">Press "Start" to continue when ready.</p>
+    <a href="/calibrate_offset" class="button">Save</a>
 {% endblock %}
