--- a/frontend/scss/partials/_base.scss
+++ b/frontend/scss/partials/_base.scss
@@ -114,18 +114,17 @@ table {
     padding: 5px 15px;
   }
 }
-
 div.tile {
   @include transition(all .3s ease);
-  @extend %invert_shadow;
   display: inline-block;
-  padding: 25px 50px;
-  width: calc(100% - 100px);
+  padding: 25px 20px;
+  width: calc(100% - 40px);
   margin-bottom: 55px;
   max-width: calc(320px - 100px);
   text-align: left;
   position: relative;
   border-radius: 5px;
+
 
   h3 {
     text-transform: uppercase;
@@ -145,24 +144,34 @@ div.tile {
   }
 
   @include media($bp4) {
-    margin-right: 25px;
-    &:last-child {
-      margin-right: 0;
-    }
+    max-width: none;
   }
 }
 
 div.setting-content {
+  div.item {
+    @extend %invert_shadow;
+    margin-bottom: 50px;
+  }
 
+  @include media($bp4) {
+    @include flexbox();
+    align-items: stretch;
+    div.item {
+      margin: 0 10px;
+      width: calc(33.33% - 10px);
+    }
+  }
 }
 
 div.dg-container {
   position: fixed;
-  bottom: 0;
+  top: 0;
   left: 0;
   right: 0;
   padding: 25px;
   background: $warning;
+  text-align: center;
 }
 
 div.dg-content {
