--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,45 +1,52 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="setting-content">
-        <h2>Device Information</h2>
-        <div class="tile">
-            <i class="icon icon-repeat live_view" v-on:click="live_view"></i>
-            <p v-if="live">live mode enabled</p>
-            <table>
-                <tr>
-                    <th>Sensor</th>
-                    <th>Data</th>
-                </tr>
-                <tr v-if="loading">
-                    <td>loading...</td>
-                    <td>please wait...</td>
-                </tr>
-                <tr v-for="(value, key) in info.data">
-                    <td>{{ "{{ key }}" }}</td>
-                    <td>{{ "{{ value }}" }}</td>
-                </tr>
-            </table>
+        <div class="item">
+            <div class="tile">
+                <h3>device</h3>
+                <i class="icon icon-refresh-cw live_view" v-on:click="live_view"></i>
+                <p v-if="live">live mode enabled</p>
+                <table>
+                    <tr>
+                        <th>Sensor</th>
+                        <th>Data</th>
+                    </tr>
+                    <tr v-if="loading">
+                        <td>loading...</td>
+                        <td>please wait...</td>
+                    </tr>
+                    <tr v-for="(value, key) in info.data">
+                        <td>{{ "{{ key }}" }}</td>
+                        <td>{{ "{{ value }}" }}</td>
+                    </tr>
+                </table>
+            </div>
         </div>
-        <h2>Scale</h2>
-        <div class="tile">
-            <h3>tare</h3>
-            <p>Set the scale to zero <i class="icon icon-alert-triangle"></i></p>
-            <form action="{{ url_for('setting') }}" method="post">
-                <input hidden v-model="weight" type="number" name="tare" value="tare">
-                <button v-on:click="post" v-confirm="{message: 'Are you sure you want to set the scale to zero?'}" id="tare"
-                        type="submit">Tare
-                </button>
-            </form>
+        <div class="item">
+            <div class="tile">
+                <h3>scale tare</h3>
+                <p>Set the scale to zero</p>
+                <form action="{{ url_for('setting') }}" method="post">
+                    <label for="tare"></label>
+                    <input hidden type="number" name="tare" id="tare">
+                    <button v-confirm="{message: 'Are you sure you want to set the scale to zero?'}" id="tare"
+                            type="submit">Tare
+                    </button>
+                </form>
+            </div>
         </div>
-        <div class="tile">
-            <h3>reset</h3>
-            <p>Reset all scale settings <i class="icon icon-alert-triangle"></i></p>
-            <form action="{{ url_for('setting') }}" method="post">
-                <input hidden v-model="weight" type="number" name="reset" value="reset">
-                <button v-on:click="post" v-confirm="{message: 'Are you sure you want to reset all scale settings?'}" id="reset"
-                        type="submit">Reset
-                </button>
-            </form>
+        <div class="item">
+            <div class="tile">
+                <h3>scale reset</h3>
+                <p>Reset all scale settings <i class="icon icon-alert-triangle"></i></p>
+                <form action="{{ url_for('setting') }}" method="post">
+                    <label for="reset"></label>
+                    <input hidden type="number" name="reset" id="reset"/>
+                    <button v-confirm="{message: 'Are you sure you want to reset all scale settings?'}" id="reset"
+                            type="submit">Reset
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
 {% endblock %}
