--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
     <ul>
         <li><a href="/"><i class="icon icon-home"></i></a></li>
         <li><a href="/settings"><i class="icon icon-settings"></i></a></li>
+        <li><a href="/quick_start"><i class="icon icon-fast-forward"></i></a></li>
     </ul>
 </footer>
 <script async src="{{ url_for('static', filename='js/script.js') }}"></script>
