--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 <body>
 <header>
     <div class="logoWrapper">
-        <img src="{{ url_for('static', filename='images/dsn_sams_logo.png') }}" alt="Synopsis Frontend Test">
+        <img src="{{ url_for('static', filename='images/dsn_sams_logo.png') }}" alt="SAMS">
     </div>
 </header>
 <div class="content">
