--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="setting-content">
+{#        <div class="item">#}
+{#            <div class="tile">#}
+{#                <h3>device</h3>#}
+{#                <i class="icon icon-refresh-cw live_view" v-on:click="live_view"></i>#}
+{#                <p v-if="live">live mode enabled</p>#}
+{#                <table>#}
+{#                    <tr>#}
+{#                        <th>Sensor</th>#}
+{#                        <th>Data</th>#}
+{#                    </tr>#}
+{#                    <tr v-if="loading">#}
+{#                        <td>loading...</td>#}
+{#                        <td>please wait...</td>#}
+{#                    </tr>#}
+{#                    <tr v-for="(value, key) in info.data">#}
+{#                        <td>{{ "{{ key }}" }}</td>#}
+{#                        <td>{{ "{{ value }}" }}</td>#}
+{#                    </tr>#}
+{#                </table>#}
+{#            </div>#}
+{#        </div>#}
         <div class="item">
             <div class="tile">
                 <h3>scale tare</h3>
