--- a/templates/calibrated.html
+++ b/templates/calibrated.html
@@ -3,7 +3,8 @@
     {% if calibrated %}
         <h1>Your system is now ready to use!</h1>
         <h1><i class="icon icon-check"></i></h1>
-        {%  else %}
+        <p>please restart your system!</p>
+    {%  else %}
         <h1>Something went wrong!</h1>
         <p>please try again...</p>
         <a href="/" class="button">Start</a>
