--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1530,6 +1530,18 @@ div.dg-content {
   display: block;
   margin: 20px; }
 
+ul.log {
+  max-width: 320px;
+  text-align: left;
+  margin: 0 auto;
+  padding: 0; }
+  ul.log li {
+    list-style: none;
+    padding: 5px; }
+    ul.log li:nth-child(2n) {
+      border-bottom: 1px solid #525355;
+      margin-bottom: 10px; }
+
 div.logoWrapper {
   display: inline-block;
   max-width: 200px;
