--- a/templates/start.html
+++ b/templates/start.html
@@ -1,17 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
-    {% if test_scale %}
+    {% if error %}
+        <p class="error"><i class="icon icon-alert-circle"></i> Please check your Scale. Something went wrong</p>
+    {% else %}
         {% if calibrated %}
             <h1>Your system is ready to use!</h1>
             <h1><i class="icon icon-check"></i></h1>
-
         {% else %}
             <h1>Initializing</h1>
             <p>Remove any items from scale.</p>
             <p class="normal">Press "Start" when ready.</p>
             <a href="/calibrate" class="button">Start</a>
         {% endif %}
-    {% else %}
-    <h1 class="error"><i class="icon icon-alert-circle"></i>Please check your Scale</h1>
+    {% endif %}
 {% endblock %}
+
+
 
